Fix image getting distorted

--- a/src/components/CaptionedImage/CaptionedImage.scss
+++ b/src/components/CaptionedImage/CaptionedImage.scss
@@ -4,11 +4,6 @@
   font-weight:700;
   margin-top:40px;
 }
-.CaptionedImage__img {
-  width:auto;
-  max-width:100%;
-  height:350px;
-}
 
 .CaptionedImage_imgWrap {
   width: 100%;
@@ -25,4 +20,16 @@
   text-align: center;
   width:100%;
   text-decoration: none;
+}
+
+.CaptionedImage__img {
+  width:auto;
+  max-width:100%;
+  max-height:350px;
+}
+
+@media only screen and (min-width: 768px) {
+  .CaptionedImage__img {
+    height:350px;
+  }
 }
